Sidebar and notes section logic moved to context provider that is wrapped around the layout within the (app) group route. Next up is implementing small design corrections before preparing a merge with main.

--- a/src/app/(app)/notes/page.module.scss
+++ b/src/app/(app)/notes/page.module.scss
@@ -1,22 +1,28 @@
-@use '../../styles/variables.scss' as *;
+@use '../../../styles/variables.scss' as *;
 @use 'sass:map';
 
 .notes {
-  padding: $spacing-0 $spacing-200;
-  color: $neutral-950;
-  position: relative;
-  height: calc(100% - 52px - 56.8px);
-  overflow-y: auto;
-  overflow-x: hidden;
+  grid-area: auto / 2 / auto / end;
+  height: 100%;
+  overflow-y: hidden;
 
-  @include for-tablet {
-    padding: $spacing-0 $spacing-400;
-    height: calc(100% - 60px - 87.41px);
-  }
+  &__inner-container {
+    padding: $spacing-0 $spacing-200;
+    color: $neutral-950;
+    position: relative;
+    height: calc(100% - 52px - 56.8px);
+    overflow-y: auto;
+    overflow-x: hidden;
 
-  @include for-desktop {
-    padding: 0;
-    height: 100%;
+    @include for-tablet {
+      padding: $spacing-0 $spacing-400;
+      height: calc(100% - 60px - 87.41px);
+    }
+
+    @include for-desktop {
+      padding: 0;
+      height: 100%;
+    }
   }
 
   &__title-bar {
